@@ -578,6 +578,13 @@ you're editing someone else's Python code."
   :group 'python-mode)
 (make-variable-buffer-local 'py-indent-offset)
 
+(defcustom py-backslashed-lines-indent-offset 5
+  "*Amount of offset per level of indentation of backslashed.
+No semantic indent,  which diff to `py-indent-offset' indicates "
+  :type 'integer
+  :group 'python-mode)
+(make-variable-buffer-local 'py-backslashed-lines-indent-offset)
+
 (defcustom pdb-path '/usr/lib/python2.7/pdb.py
   "Where to find pdb.py. Edit this according to your system.
 
